finalproject0124/src/main/java/com/test/finalproject/error/exception/AdminLevelCheckException.java
package com.test.finalproject.error.exception;

public class AdminLevelCheckException extends RuntimeException {

	public AdminLevelCheckException() {
		super();
	}
	
	public AdminLevelCheckException(String message) {
		super(message);
	}
	
}
